hinzufügen von ld-json script

--- a/index.html
+++ b/index.html
@@ -1,24 +1,120 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://www.handwerker.ch/storage/gartner/July2022/pHLDI28fVIhcxZzRNV9r-cropped.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>J.Landolt Gartenbau</title>
-    <meta name="description" content="Jorge Landolt - Ihr Gartenbauer in Bülach, Kloten" />
+    <title>Gartenbau Bülach - J. Landolt Gartenbau GmbH | Gartenpflege, Natursteinarbeiten & Landschaftsgestaltung</title>
+
+    <!-- JSON-LD Structured Data for Local Business SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "J. Landolt Gartenbau GmbH",
+      "description": "J. Landolt Gartenbau GmbH bietet professionellen Gartenbau in Bülach und Zürich. Mit kreativer Gestaltung, nachhaltiger Pflege und hochwertiger Natursteinverarbeitung verwandeln wir Ihren Garten in ein wahres Paradies. Vertrauen Sie auf unser Fachwissen und unsere Leidenschaft.",
+      "url": "https://diego-monfort-landolt.github.io/gartenbau/",
+      "image": "https://cdn.pixabay.com/photo/2018/04/15/17/44/gardening-3322224_640.png",
+      "telephone": "+41 76 419 75 08",
+      "email": "jorgelandolt@hotmail.com",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Chlihölzliweg 5",
+        "addressLocality": "Winkel",
+        "postalCode": "8185",
+        "addressCountry": "CH"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 47.4946,
+        "longitude": 8.5535
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "07:00",
+          "closes": "18:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Saturday",
+          "opens": "08:00",
+          "closes": "12:00",
+          "description": "Nur nach Vereinbarung"
+        }
+      ],
+      "founder": {
+        "@type": "Person",
+        "name": "Jorge Landolt"
+      },
+      "areaServed": [
+        {
+          "@type": "Place",
+          "name": "Bülach"
+        },
+        {
+          "@type": "Place",
+          "name": "Kloten"
+        },
+        {
+          "@type": "Place",
+          "name": "Rümlang"
+        },
+        {
+          "@type": "Place",
+          "name": "Zürich"
+        }
+      ],
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Gartenbau",
+            "description": "Neuanlagen, Umgestaltungen und komplette Gartenbauprojekte für private und gewerbliche Kunden in der Region Zürich und Umgebung."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Natursteinarbeiten",
+            "description": "Hochwertige Natursteinmauern, Wege, Terrassen für Gärten in der Region Bülach, Kloten und Rümlang."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Gartenpflege",
+            "description": "Saisonale Pflege, Rückschnitt, Rasenpflege und professionelle Gartenbetreuung für gepflegte Außenanlagen in Bülach und Umgebung."
+          }
+        }
+      ]
+    }
+    </script>
+
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="J. Landolt Gartenbau GmbH - Gartenbau, Natursteinarbeiten und Gartenpflege in Bülach, Kloten, Rümlang und Umgebung. Wir bieten maßgeschneiderte Lösungen für Ihre Gartengestaltung." />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Landolt Gartenbau" />
-     <meta property="og:description" content="Professioneller Gartenbau in Bülach, Zürich. Wir bieten hochwertige Planung, kreative Gestaltung und nachhaltige Pflege für Ihren Traumgarten. Vertrauen Sie auf unsere Erfahrung und Leidenschaft für Natur und Design." />
+    <meta property="og:title" content="J. Landolt Gartenbau GmbH - Gartenbau, Natursteinarbeiten und Pflege in Bülach" />
+    <meta property="og:description" content="J. Landolt Gartenbau GmbH bietet professionellen Gartenbau in Bülach und Zürich. Mit kreativer Gestaltung, nachhaltiger Pflege und hochwertiger Natursteinverarbeitung verwandeln wir Ihren Garten in ein wahres Paradies" />
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/04/15/17/44/gardening-3322224_640.png" />
+    <meta property="og:url" content="https://diego-monfort-landolt.github.io/gartenbau/" />
+    <meta property="og:type" content="website" />
 
-
-    <meta property="og:title" content="Gartenbau">
-    <meta property="og:description" content="Professioneller Gartenbau und Pflege">
-    <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/04/15/17/44/gardening-3322224_640.png">
-    <meta property="og:url" content="http://localhost:5173/gartenbau">
+    <!-- Hreflang for Language and Region targeting -->
+    <link rel="alternate" hreflang="de-CH" href="https://diego-monfort-landolt.github.io/gartenbau/" />
     
-    <meta property="og:type" content="website">
-
   </head>
   <body>
     <div id="root"></div>
