--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="https://www.handwerker.ch/storage/gartner/July2022/pHLDI28fVIhcxZzRNV9r-cropped.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gartenbau Bülach - J. Landolt Gartenbau GmbH | Gartenpflege, Natursteinarbeiten & Landschaftsgestaltung</title>
+    <title>Landoltgartenbau Bülach - J. Landolt Gartenbau GmbH | Gartenpflege, Natursteinarbeiten & Landschaftsgestaltung</title>
 
     <!-- JSON-LD Structured Data for Local Business SEO -->
     <script type="application/ld+json">
