--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://www.handwerker.ch/storage/gartner/July2022/pHLDI28fVIhcxZzRNV9r-cropped.png">
+    <link rel="icon" type="image/png" href="../../public/landoltgartenbaugmbhbuelach.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landoltgartenbau Bülach - J. Landolt Gartenbau GmbH | Gartenpflege, Natursteinarbeiten & Landschaftsgestaltung</title>
