aenderung im script im index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       "@type": "LocalBusiness",
       "name": "J. Landolt Gartenbau GmbH",
       "description": "J. Landolt Gartenbau GmbH bietet professionellen Gartenbau in Bülach und Zürich. Mit kreativer Gestaltung, nachhaltiger Pflege und hochwertiger Natursteinverarbeitung verwandeln wir Ihren Garten in ein wahres Paradies. Vertrauen Sie auf unser Fachwissen und unsere Leidenschaft.",
-      "url": "https://diego-monfort-landolt.github.io/gartenbau/",
+      "url": "https://gartenbaulandolt.ch/",
       "image": "https://cdn.pixabay.com/photo/2018/04/15/17/44/gardening-3322224_640.png",
       "telephone": "+41 76 419 75 08",
       "email": "jorgelandolt@hotmail.com",
