--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <meta property="og:title" content="Landolt Gartenbau GmbH - Gartenbau, Natursteinarbeiten und Pflege in Bülach" />
     <meta property="og:description" content="J. Landolt Gartenbau GmbH bietet professionellen Gartenbau in Bülach und Zürich. Mit kreativer Gestaltung, nachhaltiger Pflege und hochwertiger Natursteinverarbeitung verwandeln wir Ihren Garten in ein wahres Paradies" />
     <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/04/15/17/44/gardening-3322224_640.png" />
-    <meta property="og:url" content="https://diego-monfort-landolt.github.io/gartenbau/" />
+    <meta property="og:url" content="https://gartenbaulandolt.ch/" />
     <meta property="og:type" content="website" />
 
     <!-- Hreflang for Language and Region targeting -->
