anpassungen im ld-json script

--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
     }
     </script>
     <!-- Meta Tags for SEO -->
-    <meta name="description" content="J. Landolt Gartenbau GmbH – Gartenbau, Gartenpflege und Natursteinarbeiten in Bülach, Kloten, Rümlang und Zürich. Kreative Gartengestaltung, nachhaltige Pflege und präzise Ausführung – für private und gewerbliche Kunden." />
+    <meta name="description" content="Gartenbau, Gartenpflege und Natursteinarbeiten in Bülach, Kloten, Rümlang und Zürich. J. Landolt Gartenbau GmbH – Kreative Gartengestaltung, nachhaltige Pflege und präzise Ausführung" />
     <meta name="keywords" content="Gartenbau, Gartenpflege, Natursteinarbeiten, Bülach, Zürich, Landschaftsbau, Gartengestaltung, Gartenpflege Bülach, Natursteinmauern, Rasenpflege" />
 
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Gartenbau Bülach – J. Landolt Gartenbau GmbH" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gartenbaulandolt.ch/" />
-    <meta property="og:description" content="J. Landolt Gartenbau GmbH bietet professionellen Gartenbau in Bülach und Zürich. Mit kreativer Gestaltung, nachhaltiger Pflege und hochwertiger Natursteinverarbeitung verwandeln wir Ihren Garten in ein wahres Paradies" />
+ <meta property="og:description" content="J. Landolt Gartenbau GmbH – Ihr Spezialist für Gartenbau in Bülach und Umgebung. Kreative Gestaltung, hochwertige Natursteinarbeiten und professionelle Gartenpflege für stilvolle Außenbereiche." />
+
 
     <!-- Hreflang for Language and Region targeting -->
     <link rel="alternate" hreflang="de-CH" href="https://gartenbaulandolt.ch/" />
