hinzufügen in der index das sie von google anerkannt wird

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J. Landolt Gartenbau Bülach – Gartenbau & Gartenpflege</title>
     <!-- JSON-LD Structured Data for Local Business SEO -->
+     <meta name="google-site-verification" content="tiDFB_TN4oe1-sv99VodaxnQiuuktCthdc5tPO5Y-LQ" />
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
