aenderungen in der html

--- a/public/gartenbau.html
+++ b/public/gartenbau.html
@@ -201,7 +201,7 @@
     <header class="header">
         <div class="container">
             <h1>Gartenbau in Bülach</h1>
-            <p>Professionelle Gartengestaltung und nachhaltige Pflege</p>
+            <p>Gartengestaltung und nachhaltige Pflege</p>
         </div>
     </header>
 
@@ -238,7 +238,7 @@
 
        <h2>Gestaltung & Pflege</h2>
 
-<p>Die <strong>J. Landolt GmbH</strong> ist Ihr zuverlässiger Partner für <strong>Gartenbau in Bülach</strong> und der gesamten Region. Seit über 20 Jahren verwirklichen wir als lokaler Fachbetrieb individuelle Gartenprojekte – von der Planung bis zur fertigen Umsetzung.</p>
+<p>Die <strong>J. Landolt GmbH</strong> ist Ihr zuverlässiger Partner für <strong>Gartenbau in Bülach</strong> und der gesamten Region. Seit über 10 Jahren verwirklichen wir als lokaler Fachbetrieb individuelle Gartenprojekte – von der Planung bis zur fertigen Umsetzung.</p>
 
 <h2>Unsere Gartenbau-Schwerpunkte in Bülach</h2>
 
