anpassung des seo description

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     }
     </script>
     <!-- Meta Tags for SEO -->
-  <meta name="description" content="🌳 J. Landolt Gartenbau GmbH - Ihr Gartenspezialist in Bülach, Kloten & Umgebung. Professionelle Gartenpflege, Natursteinmauern & individuelle Gartengestaltung ✆ 076 419 75 08 – Jetzt Termin vereinbaren!">
+  <meta name="description" content="Gartenbau & Gartenpflege 🌳 | J. Landolt Gartenbau GmbH in Bülach, Kloten & Umgebung. Professionelle Gartenpflege, Natursteinmauern & individuelle Gartengestaltung ✆ 076 419 75 08 – Jetzt Termin vereinbaren!">
     <meta name="keywords" content="Gartenbau Bülach, Gartenpflege Bülach, Natursteinarbeiten Bülach, Gartengestaltung Bülach & Umgebung, Natursteinmauern, Rasenpflege, Landschaftsbau Bülach, J. Landolt Gartenbau" />
 
     <meta name="robots" content="index, follow" />
