--- a/public/gartenbau.html
+++ b/public/gartenbau.html
@@ -9,8 +9,8 @@
     <meta name="description" content="✅ J. Landolt GmbH – Ihr Gartenbau-Spezialist in Bülach ✆ 076 419 75 08 ✓ Natursteinmauern ✓ Gartengestaltung ✓ Professionelle Gartenpflege ✓ 10+ Jahre Erfahrung">
     <meta name="keywords" content="Gartenbau Bülach, Gartengestaltung Zürich, Natursteinarbeiten, Gartenpflege, Landschaftsbau Bülach, Gärtner Bülach">
     <!-- OpenGraph / Social Media -->
-    <meta property="og:title" content="Gartenbau in Bülach | J. Landolt GmbH – Naturstein & Gartenpflege">
-    <meta property="og:description" content="Ihr Experte für Gartenbau in Bülach: Natursteinmauern, individuelle Gartengestaltung und nachhaltige Pflege.">
+    <meta property="og:title" content="Gartenbau &Gartenunterhalt in Bülach | J. Landolt GmbH – Natursteinarbeiten">
+    <meta property="og:description" content="Ihr Gärtner für Gartenbau & Gartenunterhalt in Bülach | Natursteinarbeiten, individuelle Gartengestaltung und nachhaltige Pflege.">
     <meta property="og:image" content="hhttps://gartenbaulandolt.ch/assets/Gartenpflege_hecke_b%C3%BCsche_rosen_wiese_rundumpacket_gartenpflege_Buelach-Bz3uFISf.jpeg">
     <meta property="og:url" content="https://gartenbaulandolt.ch/">
     <meta property="og:type" content="website">
@@ -28,7 +28,7 @@
       "@type": "LandscapingBusiness",
       "name": "J. Landolt GmbH Gartenbau Bülach",
       "image": "https://gartenbaulandolt.ch/assets/gartenbau-landolt-buelach-DVrqdW_n.jpeg",
-      "description": "Professioneller Gartenbau in Bülach: Natursteinarbeiten, Gartengestaltung und Gartenpflege",
+      "description": "Gartenbau & Gartenpflege in Bülach | Natursteinarbeiten & Gartengestaltung",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Chlihölzliweg 5",
