--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       "name": "J. Landolt Gartenbau GmbH",
       "description":  "J. Landolt Gartenbau GmbH ist Ihr Experte für Gartenbau und Gartenpflege in Bülach und Umgebung. Wir gestalten, pflegen und verwandeln Gärten mit kreativen Lösungen, hochwertiger Natursteinarbeiten und nachhaltiger Pflege. Vertrauen Sie auf unsere langjährige Erfahrung und Leidenschaft für stilvolle Außenbereiche.",
       "url": "https://gartenbaulandolt.ch/",
-      "image": "https://gartenbaulandolt.ch/assets/landoltgartenbaugmbhbuelach-Bjg6MknR.png",
+      "image": "https://search.ch/tel/media/886caa63abef14103060ea693153d490058e895e.jpg/rs/320x320/logo.jpg",
       "telephone": "+41 76 419 75 08",
       "email": "jorgelandolt@hotmail.com",
       "priceRange": "$$",
@@ -79,7 +79,7 @@
           "itemOffered": {
             "@type": "Service",
             "name": "Gartenbau",
-            "description": "Neuanlagen, Umgestaltungen und komplette Gartenbauprojekte für private und gewerbliche Kunden in der Region Zürich und Umgebung."
+            "description": "Gärtner, Neuanlagen, Umgestaltungen und komplette Gartenbauprojekte für private und gewerbliche Kunden in der Region Bülach und Umgebung."
           }
         },
         {
@@ -87,15 +87,15 @@
           "itemOffered": {
             "@type": "Service",
             "name": "Natursteinarbeiten",
-            "description": "Hochwertige Natursteinmauern, Wege, Terrassen für Gärten in der Region Bülach, Kloten und Rümlang."
+            "description": "Hochwertige Natursteinplatten, Wege, Terrassen für Gärten in der Region Bülach, Kloten und Rümlang."
           }
         },
         {
           "@type": "Offer",
           "itemOffered": {
             "@type": "Service",
-            "name": "Gartenpflege",
-            "description": "Saisonale Pflege, Rückschnitt, Rasenpflege und professionelle Gartenbetreuung für gepflegte Außenanlagen in Bülach und Umgebung."
+            "name": "Gartenpflege & Unterhalt",
+            "description": "Gartenunterhalt in Bülach und Umgebung, Saisonale Pflege, Rückschnitt, Rasenpflege und professionelle Gartenbetreuung für gepflegte Außenanlagen"
           }
         }
       ]
